[package]
name = "proxyboi"
version = "0.5.1-alpha.0"
description = "A super simple reverse proxy with TLS support"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/proxyboi"
license = "MIT"
readme = "README.md"
keywords = ["reverse-proxy", "proxy", "https", "ssl", "tls"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
actix-web = { version= "4", features = ["rustls"] }
simplelog = "0.12"
log = "0.4"
futures = "0.3"
chrono = "0.4"
url = "2"
yansi = "1.0"
Inflector = "0.11"
thiserror = "1"
anyhow = "1"
webpki = "0.22"
rustls = { version = "0.20", features = ["dangerous_configuration"] }

[dev-dependencies]
pretty_assertions = "1.1"
